random letter generated and output of userKey

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,10 +8,10 @@ h1 {
 
     margin: 0 auto;
     border: 1px solid black;
-    font-size: 32px;
+    font-size: 36px;
     text-align: center;
     height: 150px;
-    padding: 50px;
+    padding-top: 85px;
     
 }
 
